define loop structures, elves, ralph, jr, setup refinement
